<resources>
    <string name="app_name">and</string>
    <string name="hello">Hello</string>
    <string name="andersen">Andersen</string>
    <string name="input_text">input text</string>
    <string name="ok">OK</string>
    <string name="lesson_1">Lesson 1</string>
    <string name="lesson_2">Lesson 2</string>
    <string name="lesson_3">Lesson 3</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="play" />
    <string name="stop" />
    <string name="pause" />
    <string name="songTitle">The One Ring to Rule Them All</string>
    <string name="artistName">Sauron</string>
    <string name="songGenre">psychedelic epic movie soundtrack</string>
    <string name="task_2">Task 2</string>
</resources>